# outdoors_loc_nav

./: README.md  package.xml  setup.cfg  setup.py
outdoors_loc_nav/assets/maps/: empty_map.yaml
outdoors_loc_nav/launch/: amcl.launch.py  cartographer.launch.py  localization.launch.py  map_server.launch.py  navsat_and_ekf.launch.py  orientation_initializer.launch.py  outdoors_loc.launch.py  robot_bringup.launch.py  slam.launch.py
outdoors_loc_nav/params/: amcl_params.yaml  cartographer_lds_2d.lua  ekf_navsat_params.yaml  ekf_params.yaml  initial_pose.yaml  map_server_params.yaml  navsat_params.yaml  navsat_transform.yaml  slam_toolbox_params.yaml
outdoors_loc_nav/tf/: static_transforms.yaml
outdoors_loc_nav/util/: initial_pose_pub.py  initial_pose_serv.py  orientation_service.py
