<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>outdoors_loc_nav</name>
  <version>0.1.0</version>
  <description>Outdoor-capable bringup (GPS + NavSat + EKF + SLAM Toolbox)</description>

  <maintainer email="slg@quakemap.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>